Fix invalid block scrim overflowing toolbar on mobile
On small screens the invalid block scrim overflows a block’s dropdown menu / toolbar, which is positioned beneath the block.

--- a/packages/editor/src/components/block-list/style.scss
+++ b/packages/editor/src/components/block-list/style.scss
@@ -326,6 +326,14 @@
 		}
 	}
 
+	&.has-warning.is-selected .editor-block-list__block-edit::after {
+		bottom: ( $block-toolbar-height - $block-padding - 1px );
+
+		@include break-small() {
+			bottom: -$block-padding;
+		}
+	}
+
 	// Appender
 	&.is-typing .editor-block-list__empty-block-inserter,
 	&.is-typing .editor-block-list__side-inserter {
